--- a/Debug/makefile
+++ b/Debug/makefile
@@ -55,14 +55,15 @@ Pes_2023.list \
 
 
 # All Target
-all: main-build
+all:
+	+@$(MAKE) --no-print-directory main-build && $(MAKE) --no-print-directory post-build
 
 # Main-build Target
 main-build: Pes_2023.elf secondary-outputs
 
 # Tool invocations
-Pes_2023.elf Pes_2023.map: $(OBJS) $(USER_OBJS) C:\Users\LumiQA\STM32CubeIDE\workspace_1.11.2\Pes_2023\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Pes_2023.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\LumiQA\STM32CubeIDE\workspace_1.11.2\Pes_2023\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Pes_2023.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Pes_2023.elf Pes_2023.map: $(OBJS) $(USER_OBJS) C:\Users\HieuNM\Desktop\PES_2023\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Pes_2023.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\HieuNM\Desktop\PES_2023\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Pes_2023.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
@@ -81,6 +82,10 @@ clean:
 	-$(RM) Pes_2023.elf Pes_2023.list Pes_2023.map default.size.stdout
 	-@echo ' '
 
+post-build:
+	arm-none-eabi-objcopy -O ihex Pes_2023.elf Pes_2023.hex
+	-@echo ' '
+
 secondary-outputs: $(SIZE_OUTPUT) $(OBJDUMP_LIST)
 
 fail-specified-linker-script-missing:
@@ -90,6 +95,6 @@ fail-specified-linker-script-missing:
 warn-no-linker-script-specified:
 	@echo 'Warning: No linker script specified. Check the linker settings in the build configuration.'
 
-.PHONY: all clean dependents main-build fail-specified-linker-script-missing warn-no-linker-script-specified
+.PHONY: all clean dependents main-build fail-specified-linker-script-missing warn-no-linker-script-specified post-build
 
 -include ../makefile.targets
