--- a/Debug/makefile
+++ b/Debug/makefile
@@ -62,8 +62,8 @@ all:
 main-build: Pes_2023.elf secondary-outputs
 
 # Tool invocations
-Pes_2023.elf Pes_2023.map: $(OBJS) $(USER_OBJS) C:\Users\HieuNM\Desktop\PES_2023\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Pes_2023.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\HieuNM\Desktop\PES_2023\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Pes_2023.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+Pes_2023.elf Pes_2023.map: $(OBJS) $(USER_OBJS) C:\Users\LumiQA\Desktop\PES_2023\STM32F103C8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
+	arm-none-eabi-gcc -o "Pes_2023.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m3 -T"C:\Users\LumiQA\Desktop\PES_2023\STM32F103C8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Pes_2023.map" -Wl,--gc-sections -static --specs=nano.specs -mfloat-abi=soft -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
